# stdio-utils

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: basic.rs
src/: lib.rs
src/sys/: unix.rs  windows.rs
tests/: basic.rs
