[package]
name = "stdio-utils"
description = "Utilities for working with the process standard input and output"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jprendes/stdio-utils"
homepage = "https://github.com/jprendes/stdio-utils"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = "3"
